<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:ignore="ContentDescription"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

     
     <LinearLayout  android:id="@+id/my_main_fragment_tab_layout"
            android:layout_alignParentBottom="true"
		    android:layout_width="fill_parent"
		    android:layout_height="wrap_content"
		    android:background="@color/main_tab_back"
		    android:orientation="horizontal" >
		  <FrameLayout android:id="@+id/main_fragment_title_home_layout"
		     android:layout_width="fill_parent"
		     android:layout_weight="1.0"
		     android:layout_height="wrap_content">
		      <TextView android:id="@+id/main_fragment_title_home"
		            android:gravity="center"
		            android:text="@string/main_tab_home"
		            android:textColor="@color/main_tab_title_unselect"
		            android:drawableTop="@drawable/tab_home"
		            android:drawablePadding="2dp"
		            android:textSize="12sp"
		            android:layout_gravity="center"
		            android:paddingLeft="16dp"
		            android:paddingRight="16dp"
		            android:paddingTop="6dp"
		            android:paddingBottom="5dp"
				    android:layout_width="wrap_content"
				    android:layout_height="wrap_content"/>
		  </FrameLayout>
          
		    <FrameLayout android:id="@+id/main_fragment_title_gift_layout"
			     android:layout_width="fill_parent"
			     android:layout_weight="1.0"
			     android:layout_height="wrap_content">
		       <TextView android:id="@+id/main_fragment_title_gift"
		            android:gravity="center"
		            android:text="@string/main_tab_gift"
		            android:textColor="@color/main_tab_title_unselect"
		            android:drawableTop="@drawable/tab_gift"
		            android:drawablePadding="2dp"
		            android:textSize="12sp"
				    android:layout_gravity="center"
		            android:paddingLeft="16dp"
		            android:paddingRight="16dp"
		            android:paddingTop="6dp"
		            android:paddingBottom="5dp"
				    android:layout_width="wrap_content"
				    android:layout_height="wrap_content"/>
		  </FrameLayout>
          
		   <FrameLayout android:id="@+id/main_fragment_title_more_layout"
			     android:layout_width="fill_parent"
			     android:layout_weight="1.0"
			     android:layout_height="wrap_content">
		        <TextView android:id="@+id/main_fragment_title_more"
		            android:gravity="center"
		            android:text="@string/main_tab_more"
		            android:textColor="@color/main_tab_title_unselect"
		            android:drawableTop="@drawable/tab_more"
		            android:drawablePadding="2dp"
		            android:textSize="12sp"
		            android:layout_gravity="center"
				    android:paddingLeft="16dp"
		            android:paddingRight="16dp"
		            android:paddingTop="6dp"
		            android:paddingBottom="5dp"
				    android:layout_width="wrap_content"
				    android:layout_height="wrap_content"/>
		  </FrameLayout>
           
    </LinearLayout>
    <View android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:background="@color/main_tab_line"
        android:id="@+id/my_main_fragment_line"
        android:layout_above="@id/my_main_fragment_tab_layout"
        />
    <FrameLayout 
        android:id="@+id/my_main_fragment_content"
        android:layout_above="@id/my_main_fragment_line"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent" />
</RelativeLayout>
